Fix T79164: Sculpting with smooth shading doesn't update normals

Just a missing update flag

Reviewed By: sergey

Maniphest Tasks: T79164

Differential Revision: https://developer.blender.org/D8364